--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
       <div class="element">
         <h3>This is text for a div element</h3>
       </div>
-      <div class="element" style="background-color: pink;"> <!-- change of background color -->
+      <div class="element">
         <h3>This is text for a div element</h3>
       </div>
-      <div class="element" style="background-color: pink;">
+      <div class="element">
         <h3>This is text for a div element</h3>
       </div>
-      <div class="element" style="background-color: pink;">
+      <div class="element">
         <h3>This is text for a div element</h3>
       </div>
     </section>
